Fix the Date Picker issue on small devices

--- a/src/components/myPage/DatePicker.css
+++ b/src/components/myPage/DatePicker.css
@@ -834,6 +834,7 @@
 
 .right-date-picker .react-datepicker-popper {
   transform: translate(-37.8125rem, 9.5rem) !important;
+  inset: 0px auto auto 0px !important;
 }
 
 
